z-index issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -52,14 +52,8 @@ p#sub {
 	width: 1230px;
 	margin-top: -220px;
 	margin-bottom: 50px;
-}
-
-#browserhighlights {
-	position: absolute;
-	width: 1200px;
-	right: 50px;
-	top: 130px;
 	z-index: -100;
+	position: relative;
 }
 
 button#cta {
